--- a/tsi_tablia/tsi_tablia.csproj
+++ b/tsi_tablia/tsi_tablia.csproj
@@ -11,7 +11,7 @@
     <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>tsi_tablia</RootNamespace>
+    <RootNamespace>tsi_tablica</RootNamespace>
     <AssemblyName>tsi_tablia</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <UseIISExpress>true</UseIISExpress>
@@ -47,6 +47,7 @@
       <Private>True</Private>
       <HintPath>..\packages\MySql.Web.6.8.3\lib\net45\MySql.Web.dll</HintPath>
     </Reference>
+    <Reference Include="System.DirectoryServices.Protocols" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -70,6 +71,9 @@
     <Content Include="default.aspx" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="LDAP\LdapAnonymousQuery.cs" />
+    <Compile Include="LDAP\LDAPConnector.cs" />
+    <Compile Include="LDAP\LdapCredentailValidation.cs" />
     <Compile Include="Login.aspx.cs">
       <DependentUpon>Login.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -95,6 +99,7 @@
     <Compile Include="default.aspx.designer.cs">
       <DependentUpon>default.aspx</DependentUpon>
     </Compile>
+    <Compile Include="User\User.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
